--- a/package.json
+++ b/package.json
@@ -3,9 +3,15 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
-    "react": "^16.11.0",
-    "react-dom": "^16.11.0",
-    "react-scripts": "3.2.0"
+    "@emotion/core": "^10.0.22",
+    "@mdx-js/react": "^1.5.1",
+    "@theme-ui/components": "^0.2.46",
+    "react": "^0.0.0-experimental-f6b8d31a7",
+    "react-content-loader": "^4.3.2",
+    "react-dom": "^0.0.0-experimental-f6b8d31a7",
+    "react-scripts": "3.2.0",
+    "react-use": "^13.1.0",
+    "theme-ui": "^0.2.46"
   },
   "scripts": {
     "start": "react-scripts start",
