--- a/package.json
+++ b/package.json
@@ -9,8 +9,8 @@
     "react": "^0.0.0-experimental-f6b8d31a7",
     "react-content-loader": "^4.3.2",
     "react-dom": "^0.0.0-experimental-f6b8d31a7",
+    "react-router-dom": "^5.1.2",
     "react-scripts": "3.2.0",
-    "react-use": "^13.1.0",
     "theme-ui": "^0.2.46"
   },
   "scripts": {
